changes to header structure

--- a/plugins/locales/de.json
+++ b/plugins/locales/de.json
@@ -7,7 +7,9 @@
       "resume": "Resume",
       "about": "Über mich",
       "english": "English",
-      "german": "Deutsch"
+      "german": "Deutsch",
+      "englishCode": "EN",
+      "germanCode": "DE"
     },
     "home": {
       "title": "Wilkommen",
