hid template project and disabled unused menu links

--- a/plugins/locales/en.json
+++ b/plugins/locales/en.json
@@ -28,6 +28,12 @@
       "design": "UI-Design"
     },
     "projects": {
+      "title": "My work.",
+      "subtitle": "You like good looking thing? I know i do.",
+      "rolex": {
+        "title": "Rolex packaging concept",
+        "subtitle": "What if the biggest watch brand would adopt similar packaging to the biggest electronics brand?"
+      },
       "previewTitle": "Projects"
     },
     "about": {
