--- a/plugins/locales/de.json
+++ b/plugins/locales/de.json
@@ -28,6 +28,8 @@
       "design": "UI-Design"
     },
     "projects": {
+      "title": "Meine Arbeit.",
+      "subtitle": "Du magst schöne Sachen? Ich auch.",
       "rolex": {
         "title": "Rolex Verpackung",
         "subtitle": "Was passiert, wenn Rolex ähnliche Verpackung haben würde wie Apple?"
