MVP release build

--- a/plugins/locales/en.json
+++ b/plugins/locales/en.json
@@ -29,7 +29,7 @@
     },
     "projects": {
       "title": "My work.",
-      "subtitle": "You like good looking thing? I know i do.",
+      "subtitle": "You like good looking things? I know i do.",
       "rolex": {
         "title": "Rolex packaging concept",
         "subtitle": "What if the biggest watch brand would adopt similar packaging to the biggest electronics brand?"
